<resources>
    <string name="app_name">Dalda</string>
    <string name="title_home">홈</string>
    <string name="title_liquor_collection">술 도감</string>
    <string name="title_undefined">미정</string>
    <string name="icon_menu">메뉴</string>
    <string name="text_welcome_comment">%1$s 님,\n안녕하세요!</string>
    <string name="text_home_title_top_bar"> </string>
    <string name="text_my_favorite_alcohol">내가 좋아하는 술</string>
    <string name="text_whole_view">전체보기</string>
    <string name="text_alcohol_recommendation">이런 술은 어때요?</string>
    <string name="text_more_contents">콘텐츠 더보기</string>
    <string name="text_search_alcohol">궁금한 술을 검색해보세요</string>
    <string name="text_notice">공지사항</string>
    <string name="text_event">이벤트</string>
    <string name="text_inquire">문의하기</string>
    <string name="text_personal_information_processing_policy">개인정보처리방침</string>
    <string name="text_terms_and_conditions">이용약관</string>
    <string name="text_copyright">Copyright ⓒ 2024 by Dalda</string>
    <string name="text_drop_down_menu_request_info">정보 수정 요청하기</string>
    <string name="text_drop_down_menu_share">공유하기</string>
    <string name="text_sign_in_banner">달다에 로그인하고\n나만의 술도감을 만들어보세요</string>
    <string name="text_do_sign_in">로그인하기</string>
    <string name="text_recent_search_work">최근 검색어</string>
    <string name="text_sign_in_recommendation">달다의 모든 기능을 즐겨보세요!</string>
    <string name="text_other_alcohol">다른 %1s도 있어요.</string>
    <string name="text_add_pictorial_book">술 도감에 추가하기</string>
    <string name="text_save_favorite_alcohol">좋아하는 술을 저장해 보세요</string>
    <string name="text_blog_naver">네이버 블로그</string>
    <string name="text_blog_review">블로그 리뷰</string>
    <string name="text_keyword_search_result">키워드로 수집한 정보를 확인해보세요</string>
    <string name="text_preparing">준비중이예요.\n다음 업데이트에서 만나요.</string>
    <string name="text_preparing_button">기대할게요!</string>
    <string name="text_comeback_main">메인으로 돌아가기</string>
    <string name="text_occur_error">오류가 발생했어요</string>
    <string name="text_member_detail">회원 상세</string>
    <string name="text_empty_bookmark">좋아하는 술을 추가해 주세요.</string>

    <string name="description_user_profile_img">유저 프로필 이미지</string>
    <string name="description_search_icon">검색 아이콘</string>
    <string name="description_search_camera_icon">검색 카메라 아이콘</string>
    <string name="description_close_icon">닫기 아이콘</string>
    <string name="description_instagram_icon">인스타그램 아이콘</string>
    <string name="description_link_icon">링크 아이콘</string>
    <string name="description_back_icon">뒤로가기 아이콘</string>
    <string name="description_liquors_img">주류 모임 이미지</string>
    <string name="description_break_glass_img">깨진 유리잔 이미지</string>
    <string name="description_login_background">주류 배경</string>
    <string name="description_alcohol_image">주류 이미지</string>
    <string name="description_alcohol_tag">주류 태그</string>

    <string name="label_search_camera_button">카메라 버튼</string>
    <string name="label_search_album_button">앨범 버튼</string>
    <string name="label_search_guide_text">술 전면의 라벨을 촬영해 주세요.</string>
    <string name="label_search_title">사진으로 술 검색</string>
    <string name="dialog_no_results_title">검색 결과가 없어요.</string>
    <string name="dialog_no_results_image_icon">검색 결과 없음 아이콘</string>
    <string name="dialog_no_results_retry_button_title">다시 검색하기</string>
    <string name="dialog_no_results_suggestion_button_title">추가 요청하기</string>
    <string name="dialog_search_results_spirits_image">주류 이미지</string>
    <string name="dialog_search_results_spirits_title">검색결과</string>


    <string name="login_welcome_text">달다에\n어서오세요!</string>
    <string name="login_kakao_button_text">카카오로 로그인</string>
    <string name="login_kakao_skip_button_text">로그인 없이 둘러보기</string>
    <string name="confetti_welcome_text">%s님\n반가워요!</string>
    <string name="confetti_welcome_sub_text">오늘의 달달한 한잔을 기록해보세요.</string>
    <string name="confetti_button_text">홈으로 이동</string>
    <string name="onboarding_first_guide">찾고싶은 술의 정보를 간편하게 찾아보세요.</string>
    <string name="onboarding_second_guide">마신 술의 정보를 남겨 추억으로 저장하세요.</string>
    <string name="onboarding_third_guide">술의 정보를 하나하나 기록해 나만의 술도감을 완성하세요.</string>
    <string name="onboarding_skip">건너뛰기</string>
    <string name="description_onboarding_image">소개 이미지</string>
    <string name="text_no_search_result">검색 결과가 없어요.</string>
    <string name="text_request_additional">추가 요청하기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_request_info_modify">https://forms.gle/8x4WHBvcLELPG1nc6</string>
    <string name="url_request_alcohol_additional">https://forms.gle/27HZkYySsRVRbh7MA</string>

</resources>
