<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogSearchResultsToolbar"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottom_sheet_toolbar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_search_results_spirits_title"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/dialogSearchResultsSpiritsListContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogSearchResultsToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dialogSearchResultsSpiritsContainer"
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <ImageView
                android:id="@+id/dialogSearchResultsSpiritsImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:background="@color/black"
                android:contentDescription="@string/dialog_search_results_spirits_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/dialogSearchResultsSpiritsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="@+id/dialogSearchResultsSpiritsImage"
                app:layout_constraintBottom_toTopOf="@+id/dialogSearchResultsSpiritsCategoryContainer"
                app:layout_constraintStart_toEndOf="@+id/dialogSearchResultsSpiritsImage"
                app:layout_constraintEnd_toStartOf="@+id/dialogSearchResultsSpiritsProof"
                tools:text="참이슬"/>

            <LinearLayout
                android:id="@+id/dialogSearchResultsSpiritsCategoryContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/dialogSearchResultsSpiritsImage"
                app:layout_constraintEnd_toStartOf="@+id/dialogSearchResultsSpiritsProof"
                app:layout_constraintTop_toBottomOf="@+id/dialogSearchResultsSpiritsName"
                app:layout_constraintBottom_toBottomOf="@+id/dialogSearchResultsSpiritsImage">

                <com.google.android.material.chip.Chip
                    style="@style/SojuChipStyle"
                    android:id="@+id/dialogSearchResultsSpiritsSoju"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="소주"/>

            </LinearLayout>

            <TextView
                android:id="@+id/dialogSearchResultsSpiritsProof"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:textSize="13sp"
                android:textColor="@color/gray_50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:text="18%"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/dialogSearchResultsConfirmBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialog_no_results_retry_button_title"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintWidth_max="300dp"
        app:layout_constraintTop_toBottomOf="@+id/dialogSearchResultsSpiritsListContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/dialogSearchResultsSuggestionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="34dp"
        android:text="@string/dialog_no_results_suggestion_button_title"
        android:textSize="12sp"
        android:textColor="@color/gray_50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogSearchResultsConfirmBtn"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>